fix: border not showing on mobile

--- a/src/app/components/bookmark/bookmark.component.scss
+++ b/src/app/components/bookmark/bookmark.component.scss
@@ -5,7 +5,7 @@
   .bookmark-item {
     margin: 5px;
     margin-top: 10px;
-    border: #f5f5f5af 1px solid;
+    border: rgba(245, 245, 245, 0.686) 1px solid;
     border-radius: 10px;
 
     .header {
